# CA3DMM-MPI

./: .gitignore  CMakeLists.txt  ca3dmm.cpp  ca3dmm.h  inputs.txt  utils.h
test/: CMakeLists.txt  check_output.py  generate_data.cpp
